--- a/variables.scss
+++ b/variables.scss
@@ -1,10 +1,16 @@
 $background-color: rgb(44, 42, 40);
+
 $projects-background-color: rgb(40, 39, 37);
+$skill-tag-background: rgb(60, 51, 42);
+
 $about-btn-color: rgb(80, 64, 53);
 $about-drop-color: rgb(31, 28, 26);
 $navbar-color: rgb(100, 86, 75);
+
 $contact-btn-color: rgb(39, 36, 31);
+$contact-btn-color-hover: rgb(95, 87, 73);
 $contact-btn-border: rgb(255, 209, 176);
+
 $footer-background-color: rgb(98, 75, 49);
 
 $about-drophover-color: rgb(179, 155, 138);
@@ -15,5 +21,5 @@ $hover-color: rgb(189, 181, 138);
 $font-cormorant: 'Cormorant', serif;
 $font-inter: 'Inter', sans-serif;
 
-$skill-tag-background: rgb(60, 51, 42);
+
 $icon-tag-background: rgb(105, 77, 57);
