--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
    
 
     .contact__title{
@@ -25,6 +26,10 @@
         font-size: large;
         text-align: center;
         width: 10rem;
+    }
+
+    .contact__btn:hover{
+        background-color: $contact-btn-color-hover;
     }
 
     .contact__email{
