--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
    
 
     .contact__title{
@@ -18,7 +18,7 @@
     .contact__btn{
         background-color: $contact-btn-color;
         color: $text-color;
-        border-color: $contact-btn-border;
+        border: solid $contact-btn-border;
         margin-bottom: 1.5rem;
         margin-top: 2rem;
         padding: 1rem 0.25rem;
@@ -26,6 +26,7 @@
         font-size: large;
         text-align: center;
         width: 10rem;
+        text-decoration: none;
     }
 
     .contact__btn:hover{
