--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -7,9 +7,11 @@
     .nav__nav-burger{
         
         .nav__nav-burgerBtn{
-            margin-top: 1rem;
-            padding: 1rem;
+            margin-top: 1.5rem;
+            padding: .8rem;
             background-color: $navbar-color;  
+            color: white;
+            font-size: 1.25rem;           
             
         }
 
