--- a/variables.scss
+++ b/variables.scss
@@ -1,11 +1,14 @@
 $background-color: rgb(44, 42, 40);
 
+$home-name-color: rgb(212, 187, 121);
+
 $projects-background-color: rgb(40, 39, 37);
 $skill-tag-background: rgb(60, 51, 42);
+$seperator: rgb(72, 70, 66);
 
 $about-btn-color: rgb(80, 64, 53);
 $about-drop-color: rgb(31, 28, 26);
-$navbar-color: rgb(100, 86, 75);
+$navbar-color: rgb(65, 56, 49);
 
 $contact-btn-color: rgb(39, 36, 31);
 $contact-btn-color-hover: rgb(95, 87, 73);
