--- a/layout/_projects.scss
+++ b/layout/_projects.scss
@@ -80,7 +80,7 @@
             .projects__grid{
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
+                grid-template-rows: 1fr;
                 
                 .projects__grid-item{
                     width: auto;
