--- a/variables.scss
+++ b/variables.scss
@@ -25,4 +25,4 @@ $font-cormorant: 'Cormorant', serif;
 $font-inter: 'Inter', sans-serif;
 
 
-$icon-tag-background: rgb(105, 77, 57);
+$icon-tag-color: white;
