--- a/layout/_home.scss
+++ b/layout/_home.scss
@@ -7,8 +7,12 @@
 
         .home__name{
             font-size: 2rem;
-            color: $home-name-color;
+            color: white;
             font-weight: 200;
+
+            .home__name-alt{
+                color: $home-name-color;
+            }
         }
 
         #seperator{
