--- a/layout/_projects.scss
+++ b/layout/_projects.scss
@@ -2,59 +2,52 @@
 
 
     .projects{
-        width: 100%;
         background-color: $projects-background-color;
-        padding: 0.5rem 0.25rem;
+        padding: 2% 3% 2%;
         border-radius: 25px;
 
         .projects__title{
             padding-left: 1.5rem;
             padding-top: 1rem;
-            font-size: 3rem;
+            font-size: 3.25rem;
             font-weight: 400;
         }
 
         #seperator{
             width: 20%;
             background-color: $seperator;
-            margin-left: 6%;
-            margin-top: 3%;
+            margin: 3% 0%;
         }
 
         .projects__grid{
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
             width: 100%;
 
             .projects__grid-item{
-                padding: 1rem 2rem;
-                width: 80%;
+                width: 100%;
 
                 .projects__grid-item-image{
-                    width: 100%;
+                    width: 80%;
                     height: 60%;
                     object-fit: cover ;
                     border-radius: 12.5px;
                     border: solid 0.25rem white;
-                    margin-bottom: 1rem;
+                    margin: 2% 8% 0%;
                 }
 
                 .projects__grid-item-title{
                     font-size: 1.8rem;
                     font-weight: 200;
-                }
-
-                .projects__grid-item-icons{
-                    float: right;
-                    .projects__grid-item-icon{
-                        background-color: $icon-tag-background;
-                    }
+                    padding-left: 8%;
                 }
 
                 .projects__grid-item-skillTags{
                     align-items: center;
-                    margin-top: 1.5rem;
+                    padding-left: 8%;
+                    margin-bottom: 5%;
 
                     .projects__grid-item-skill{
                         background-color: $skill-tag-background;
@@ -66,34 +59,44 @@
                         margin-right: 0.2rem;
                     }
 
-                    .projects__grid-item-icon{
+                    .projects__grid-item-icons{
                         display: inline-block;
-                        padding: .5rem;
+                        padding-top: 5%;
+                        padding-left: 1%;
+                        justify-content: center;
+                        
+    
+                        .projects__grid-item-icon{
+                            color: $icon-tag-color;
+                            margin-left: 2.5px;                            
+                            padding-left: .5rem;
+                        }
                     }
                 }
-                
             }
-            
         }
 
         @media screen and (min-width: 768px){
-            .projects__grid{
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr;
-                
-                .projects__grid-item{
-                    width: auto;
 
-                    .projects__grid-item-image{
+            .projects{
+                padding: 2% 3.5% 4%;
 
-                    }
-                }
-
-                .projects__grid-item-skillTags{
+                .projects__grid{
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-rows: 1fr;
                     
+                    .projects__grid-item{
+                        width: auto;
+
+                        .projects__grid-item-image{
+                            width: 1rem;
+                            height: 1rem;
+                        }
+                    }
                 }
             }
         }
+
     }
 
