--- a/layout/_projects.scss
+++ b/layout/_projects.scss
@@ -20,8 +20,10 @@
         }
 
         .projects__grid{
-            display: flex;
-            flex-direction: column;
+            /* display: flex;
+            flex-direction: column; */
+            /* display: grid;
+            grid-template-columns: 1fr; */
             justify-content: center;
             align-items: center;
             width: 100%;
@@ -45,8 +47,14 @@
                 }
 
                 .projects__grid-item-skillTags{
+                    display: flex;
+                    flex-direction: column column column;
+                    /* display: grid; */
+                    grid-template-rows: row row;
+                    grid-template-columns: column column column;
                     align-items: center;
                     padding-left: 8%;
+                    padding-top: 2%;
                     margin-bottom: 5%;
 
                     .projects__grid-item-skill{
@@ -61,7 +69,7 @@
 
                     .projects__grid-item-icons{
                         display: inline-block;
-                        padding-top: 5%;
+                        padding-top: 2.5%;
                         padding-left: 1%;
                         justify-content: center;
                         
@@ -70,13 +78,18 @@
                             color: $icon-tag-color;
                             margin-left: 2.5px;                            
                             padding-left: .5rem;
+                            padding-bottom: .25rem;
                         }
                     }
                 }
             }
         }
 
-        @media screen and (min-width: 768px){
+        
+
+    }
+
+    @media screen and (min-width: 768px){
 
             .projects{
                 padding: 2% 3.5% 4%;
@@ -90,13 +103,14 @@
                         width: auto;
 
                         .projects__grid-item-image{
-                            width: 1rem;
-                            height: 1rem;
+                            
+                        }
+
+                        .projects__grid-item-skillTags{
+                            
                         }
                     }
                 }
             }
         }
-
-    }
 
