improved project styling

--- a/layout/_about.scss
+++ b/layout/_about.scss
@@ -32,6 +32,7 @@
         width: 35%;
         align-self: center;
         margin: .5rem;
+        max-width: 30rem;
     }    
         
     .about__grid{
