--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -8,6 +8,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        font-size: 1.5rem;
         gap: 1rem;
         
         a:visited{color: white;}
