--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
   margin: 2% 8% 0%;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-title {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: 200;
   padding-left: 8%;
 }
@@ -115,6 +115,8 @@
   padding-left: 8%;
   padding-top: 2%;
   margin-bottom: 5%;
+  flex-wrap: wrap;
+  gap: 0.2rem;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-skillTags .projects__grid-item-skill {
   background-color: rgb(60, 51, 42);
@@ -126,16 +128,14 @@
   margin-right: 0.2rem;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-skillTags .projects__grid-item-icons {
-  display: inline-block;
+  display: flex;
   padding-top: 2.5%;
-  padding-left: 1%;
+  gap: 0.3rem;
   justify-content: center;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-skillTags .projects__grid-item-icons .projects__grid-item-icon {
   color: white;
   margin-left: 2.5px;
-  padding-left: 0.5rem;
-  padding-bottom: 0.25rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -146,9 +146,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
+    width: 100%;
   }
   .projects .projects__grid .projects__grid-item {
-    width: auto;
+    width: 100%;
+  }
+  .projects .projects__grid .projects__grid-item .projects__grid-item-image {
+    width: 85%;
   }
 }
 .about {
@@ -178,6 +182,7 @@
   width: 35%;
   align-self: center;
   margin: 0.5rem;
+  max-width: 30rem;
 }
 .about .about__grid {
   margin: 1rem 0rem;
@@ -261,6 +266,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-size: 1.5rem;
   gap: 1rem;
 }
 .footer__bar .footer__icons a:visited {
