--- a/variables.scss
+++ b/variables.scss
@@ -3,6 +3,7 @@ $background-color: rgb(44, 42, 40);
 $home-name-color: rgb(212, 187, 121);
 
 $projects-background-color: rgb(40, 39, 37);
+$projects-item-hover: rgb(74, 71, 66);
 $skill-tag-background: rgb(60, 51, 42);
 $seperator: rgb(72, 70, 66);
 
