--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column column;
     justify-content: space-between;
-    gap: 1.5rem;
+    width: 100%;
     flex-wrap:nowrap;
     padding: 1rem 2rem;
 
@@ -38,23 +38,5 @@
         a:link{
             text-decoration: none;
         }
-    }
-}
-
-@media screen and (min-width: 768px){
-    .nav{
-        gap: 5rem;
-    }
-}
-
-@media screen and (min-width: 1024px){
-    .nav{
-        gap: 19rem;
-    }
-}
-
-@media screen and (min-width: 1444px){
-    .nav{
-        gap:40rem;
     }
 }
